# mlops_WassimChahine_ChaficElHajjChehade

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  run_batch_inference_pipeline.py  run_training_pipeline.py  train.py
scripts/: batch_inference.py  feature_engineering.py  preprocess.py
